Login buttons fixed Aside and paragraph still left

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-*{
-    box-sizing:border-box;
-}
 body {
     width: 1024px;
     margin-left: auto;
@@ -16,6 +13,7 @@ body {
     color:greenyellow;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 header{
     grid-area: header;
     grid-row-start: 1;
@@ -30,6 +28,7 @@ header{
     background-color:yellowgreen;
     height:60px;
 }
+
 header>h1{
     grid-area:logo;
     display: grid;
@@ -48,11 +47,13 @@ nav>ul{
     grid-column-start: 2;
     align-items: left;
 }
+
 nav>ul>li{
     display: inline-block;
     text-decoration:none;
     align-items: left;
 }
+
 nav>ul>li>a{
     display:inline-flex;
     height:50px;
@@ -61,13 +62,14 @@ nav>ul>li>a{
     align-items: center;
     justify-content: center;
     text-decoration:none;
+    border-radius: 10px;
     background-color: yellowgreen; 
     color:green;
 }
+
 nav>ul>li>a:hover {
     color:yellowgreen;
     background-color:green; 
-
 }
 
 header>a {
@@ -78,16 +80,17 @@ header>a {
     font-weight: bold;
     align-items: center;
     justify-content: center;
+    border-radius: 10px;
     text-align: center;
     text-decoration:none;
     background-color: yellowgreen; 
     color:green
 }
+
 header>a:hover {
     color:yellowgreen;
     background-color:green; 
 }
-
 
 main{
     grid-area:main;
@@ -97,10 +100,9 @@ main{
     grid-column-start: 1;
     grid-column-end: 2;
     height: auto;
-
-    background-color: black;
-    
+    background-color: black;    
 }
+
 main>h1{
     grid-area: main;
     grid-row-start: 2;
@@ -109,8 +111,8 @@ main>h1{
     grid-column-end: 2;
     margin-left: 3%;
     margin-right: 3%;
-
 }
+
 main>p{
     margin-left: 3%;
     margin-right: 3%;
@@ -134,8 +136,6 @@ article>img{
     
 }
 
-
-
 aside{
     grid-area:aside;
     grid-row-start: 2;
@@ -154,14 +154,15 @@ footer{
     justify-content: center;
     height:40px;
     background-color: yellowgreen;
-    color:black;
+    color:green;
 }
+
 main>h2{
     margin-left:33%;
     width: 1024px;
-    text-transform: uppercase;
-    
+    text-transform: uppercase;    
 }
+
 form{
     display:block;
     background-color: brown;
@@ -175,18 +176,46 @@ form{
     padding-top: 2%;
 
 }
+
 form>input{
 display: inline-block;
 align-items: center;
 margin-bottom: 5%;
 }
 
+input[type=reset]{ 
+   background-color: yellowgreen;
+   color:red;
+   text-transform: capitalize;
+   font-weight: bold;
+   border-radius: 5px;
+   border: 0;
+}
 
+input[type=reset]:hover{ 
+    background-color: red;
+    color:yellow;
+}
+
+input[type=submit]{ 
+    background-color:yellowgreen;
+    color: green;  
+    text-transform: capitalize;
+    font-weight: bold;
+    border-radius: 5px;
+    border: 0;
+}
+
+input[type=submit]:hover{ 
+    color:yellow;
+    background-color: green;  
+ }
+ 
 #username{
 
         width: 90%;
 }
+
 #password{
     width: 90%;
-
 }
